# proyecto2progra2

./: CMakeLists.txt  README.md  equipos.txt  final_report.txt  final_report_only_current_session.txt  incidencias.txt  log.txt  main.cpp  map_data.txt  readme.md  registros.txt  registrosNuevo.txt
cabeceras/: Incidencia.h
cabeceras/archivos/: LectorEquipos.h  LectorIncidencias.h
cabeceras/equipos/: AllInOne.h  ComputadoraEscritorio.h  Equipo.h  Laptop.h  Microscopio.h  Osciloscopio.h
cabeceras/excepciones/: ErrorArchivo.h  ErrorArchivoEscritura.h  ErrorDecimal.h  ErrorPuntero.h  ErrorValor.h
cabeceras/listas/: ListaEquipo.h  ListaIncidencia.h  NodoEquipo.h  NodoIncidencia.h
cabeceras/mantenimientos/: Mantenimiento.h  MantenimientoBase.h  MantenimientoCambio.h  MantenimientoDecorador.h  MantenimientoSoftware.h
headers/combat/: Combat.h
headers/content/: Bomb.h  Chest.h  Content.h  Medkit.h  Monster.h  Portal.h  PowerUp.h  PowerUpAttack.h  PowerUpDecorator.h  PowerUpHealth.h
headers/exceptions/: ErrorArchivoEscritura.h  ErrorArchivoLectura.h  ErrorCast.h  ErrorNegativo.h  ErrorRango.h  FileException.h  FileExceptionIn.h  FileExceptionOut.h
headers/player/: BaseStats.h  ExtraDamageStats.h  ExtraHealthStats.h  IStats.h  Player.h  StatsDecorator.h
headers/powers/: Power.h  PowerDecorator.h
headers/strategies/: AttackStrategy.h  HealthLockAttack.h  LeechAttack.h  NormalAttack.h  PoisonAttack.h  StunAttack.h  WeakenerAttack.h
headers/system/: EventObserver.h  GameConstants.h  GameController.h  GameHelper.h  Logger.h  LoggerObserver.h  MapObserver.h
headers/world/: Cell.h  Dimension.h  Map.h
origen/: Incidencia.cpp
origen/archivos/: LectorEquipos.cpp  LectorIncidencias.cpp
origen/equipos/: AllInOne.cpp  ComputadoraEscritorio.cpp  Equipo.cpp  Laptop.cpp  Microscopio.cpp  Osciloscopio.cpp
origen/excepciones/: ErrorArchivo.cpp  ErrorArchivoEscritura.cpp  ErrorArchivoLectura.cpp  ErrorCast.cpp  ErrorDecimal.cpp  ErrorNegativo.cpp  ErrorPuntero.cpp  ErrorRango.cpp  ErrorValor.cpp
origen/listas/: ListaEquipo.cpp  ListaIncidencia.cpp  NodoEquipo.cpp  NodoIncidencia.cpp
origen/mantenimientos/: Mantenimiento.cpp  MantenimientoBase.cpp  MantenimientoCambio.cpp  MantenimientoDecorador.cpp  MantenimientoSoftware.cpp
src/: Incidencia.cpp
src/content/: Bomb.cpp  Chest.cpp  Content.cpp  Medkit.cpp  Monster.cpp  Portal.cpp  PowerUp.cpp  PowerUpDecorator.cpp
src/exceptions/: ErrorArchivo.cpp  ErrorArchivoEscritura.cpp  ErrorArchivoLectura.cpp  ErrorCast.cpp  ErrorDecimal.cpp  ErrorNegativo.cpp  ErrorPuntero.cpp  ErrorRango.cpp  ErrorValor.cpp  FileException.cpp  FileExceptionIn.cpp  FileExceptionOut.cpp
src/player/: BaseStats.cpp  ExtraDamageStats.cpp  ExtraHealthStats.cpp  Player.cpp  StatsDecorator.cpp
src/powers/: Power.cpp  PowerDecorator.cpp
src/strategies/: AttackStrategy.cpp  HealthLockAttack.cpp  LeechAttack.cpp  NormalAttack.cpp  PoisonAttack.cpp  StunAttack.cpp  WeakenerAttack.cpp
src/system/: EventObserver.cpp  GameController.cpp  GameHelper.cpp  Logger.cpp  LoggerObserver.cpp  MapObserver.cpp
src/world/: Cell.cpp  Dimension.cpp  Map.cpp
